# pydeus_types

./: .gitignore  pyproject.toml
modeus_jsons/: test.json
script/: __main__.py  builders.py  modeus_json_parser.py  scripts.py  strategies.py
script/models_api_links/: abc.py  schedule_calendar.py  types.py
script/models_jsons_getter/: abc.py  getter.py
